# caracal

./: .gitignore  .gitmodules  .persistent_history  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  Dockerfile  Documentation_Example.yml  Install_Log.txt  Jenkinsfile.sh  MANIFEST.in  README.md  README.rst  Run_log_MeerKATHI.txt  alpha_requirements.txt  beta_requirements.txt  caratekit.sh  dev-requirements.txt  log-automatically_catergorize_observed_fields.txt  log-get_convert_and_extract_data.txt  log-make_hi_cube.txt  log-self_calibration_loop.txt  pull_test.sh  pyproject.toml  requirements.in  requirements.txt  ruff.toml  setup.py  stimela-last_stable.txt  stimela-master.txt  stimela_last_stable.txt  stimela_master.txt  weekly_test.sh
.github/ISSUE_TEMPLATE/: bug_report.md  other--not-recommended-.md
.github/workflows/: changelog.yml  continuous_integration.yml  docs-ci.yml  publish-package.yml  publish_documentation.yml  publish_package.yml  python-ci.yml  pythonpublish.yml  stimela2_ci.yml  test_installation.yml  ubuntu-20_install.yml  ubuntu-22_install.yml
.travis/: mypy.docker  py3.docker
aoflagger_strategies/: 1Apr2017_firstpass_strategy.rfis
caracal/: __init__.py  exceptions.py  main.py
caracal/data/: casa_calibrators.txt  casa_calibrators.yml  nrao_xcal.yml  southern_calibrators.txt  taylor_legodi_2024.txt
caracal/dispatch_crew/: caltables.py  catalog_parser.py  config_parser.py  interruptable_process.py  meerkat_archive_interface.py  noisy.py  stream_director.py  utils.py  worker_help.py
caracal/notebooks/: __init__.py  detailed-final-report.ipynb  detailed-final-report.ipynb.j2  header.j2  project-directory.ipynb  project-logs.ipynb  project-logs.ipynb.j2  std-progress-report.ipynb  std-progress-report.ipynb.j2
caracal/recipes/: caracal-cabs.yml  caracal-ddcal.yml  caracal-flag.yml  caracal-libs.yml  caracal-schema.yml  caracal-selfcal.yml  caracal-srun.yml  caracal-test-sets.yml  caracal.yml
caracal/sample_configurations/: carateConfig.yml  meerkat-continuum-defaults.yml  meerkat-defaults.yml  meerkat-fullStokes-continuum-defaults.yml  meerkat-polcal-strategies.yml  minimalConfig.yml  minitestConfig.yml  mosaic_basic_config.yml  workflow_new.yml
caracal/schema/: __init__.py  cross_cal_schema.yml  crosscal_schema.yml  ddcal_schema.yml  direction_dependent_calibration_schema.yml  flag_schema.yml  flagging_schema.yml  general_schema.yml  get_data_schema.yml  getdata_schema.yml  image_line_schema.yml  inspect_data_schema.yml  inspect_schema.yml  line_schema.yml  mask_schema.yml  masking_schema.yml  mosaic_schema.yml  obsconf_schema.yml  observation_config_schema.yml  polcal_schema.yml  polimg_schema.yml  prep_schema.yml  prepare_data_schema.yml  rmsynthesis_schema.yml  self_cal_schema.yml  selfcal2_schema.yml  (+3 more)
docs/: README.md  make_caracal_docs.py
docs_output/: caracalREADME.html  genindex.html  index.html  objects.inv  searchindex.js
meerkathi/: HI-schema.yml  __init__.py  __main__.py  __version__.py  default-config.yml  default-config.yml.orig  default-config.yml___jb_tmp___  direction_dependent_calibration_schema-0.2.0.yml  hi-worker-default-config-dev.yml  hi-worker-schema-dev.yml  hi-worker-schema.yml  main.py
pipeline/: __init__.py  meerkathi-parameters.par  meerkathi-parameters.yml  meerkathi-pipeline.py  meerkathi-pipeline_2gc.py  meerkathi.py
stimela_parameter_files/: aimfast-139621680410816153728952273.json  aimfast-139621680410816153729770095.json  aimfast-139621680410816153731147057.json  aimfast-140407596422368153719475654.json  aimfast-140407596422368153719966529.json  aimfast-140407596422368153722530082.json  calibrate_1_0-139621680362024153728278039.json  calibrate_2_0-14040771550445615372073527.json  calibrate_3_0-140407715504456153721628211.json  calibrate_4_0-140407715504456153722529982.json  calibrate_5_0-139621680362024153731146967.json  extract_1-139621561451696153727878759.json  extract_2-139621561451696153728278143.json  extract_3-139621561451696153728952252.json  extract_4-140407596421984153721628295.json  extract_5-140407596421984153722530058.json  extract_6-139621561451696153731147038.json  image_1-140407715637360153719475614.json  image_2-139621560760384153728278108.json  image_3-139621560760384153728952228.json  image_4-139621560760384153729769345.json  image_5-140407715637360153722530027.json  image_6-139621560760384153731147011.json
tests/: __init__.py  test_dispatch_crew_utils.py  test_pipeline.py  test_runner.py
(+373 files in other folders)
