[project]
name = "caracal"
version = "1.2.0"
description = "Containerized Automated Radio Astronomy Calibration"
authors = [{ name = "The CaraCAL Team", email = "caracal-info@googlegroups.com" }]
license = { file = "LICENSE" }
readme = "README.rst"
requires-python = ">=3.9,<3.13"
dependencies = [
    "stimela>=1.8.0",
    "psutil>=5.9.4",
    "pykwalify>=1.8.0",
    "progressbar2>=4.2.0",
    "ruamel.yaml>=0.17.21",
    "pyyaml>=6.0.1",
    "astropy>=5.3.3",
    "scipy",
    "regions",
    "astroquery",
    "numpy<2.0",
    "nbconvert",
    "radiopadre-client",
    "python-casacore",
    "matplotlib",
    "jinja2"
]
packages = [{ include = "caracal" }]

[dependency-groups]
tests = [
    "pytest>=7.1.3",
    "flake8>=5.0.0"
]
docs = [
    "Sphinx>=4.0.1",
    "sphinx-copybutton>=0.5.0",
    "furo>=2022.9.15"
]

[tool.uv]
default-groups = [
    "tests",
    "docs"
]

[project.scripts]
caracal = "caracal.main:driver"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
